fixed spacing

--- a/frontend/src/components/blog-list/blog-list.scss
+++ b/frontend/src/components/blog-list/blog-list.scss
@@ -110,7 +110,7 @@
 
       h3 {
         font-size: var(--font-size-5);
-        margin: 0 0 20px 0;
+        margin: 0 0 0 0;
         flex-grow: 1;
         hyphens: auto;
         -webkit-hyphens: auto;
